# react-native-godot

./: .gitignore  README.md  package-lock.json  package.json  somesoap-react-native-godot.podspec  tsconfig.json
android/: build.gradle  fix-prefab.gradle
android/src/main/cpp/: CMakeLists.txt  libgodot_jni.cpp  libgodot_jni.h  native_godot_module_jni.h
android/src/main/java/net.somesoap/rtngodot/: GodotPackage.java  NativeGodotModule.java  RTNGodotView.java  RTNGodotViewManager.java  RTNLibGodot.java  SurfaceReadyEvent.java
common/: NativeGodotModule.cpp
example/: App.tsx  babel.config.js  package-lock.json  package.json  update_deps.sh
example/android/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/godottest/: MainActivity.kt  MainApplication.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: Podfile
example/ios/GodotTest/: Info.plist
example/ios/GodotTest.xcodeproj/: project.pbxproj
ios/: RTNGodotView.h  RTNGodotView.mm
js/: NativeGodotModule.ts  RTNGodotViewNativeComponent.ts
scripts/: download-prebuilt.js
